--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p class="room__description">Mystery</p>
                     </div>
                     <div class="img-gradient">
-                        <img src="assets/img/rooms/da_vinchi.jpg" alt="Room">
+                        <img src="assets/img/rooms/da_vinchi.png" alt="Room">
                     </div>
                 </div>
                 <div class="room">
@@ -76,7 +76,7 @@
                         <p class="room__description">Action</p>
                     </div>
                     <div class="img-gradient">
-                        <img src="assets/img/rooms/mission_belvedere.jpg" alt="Room">
+                        <img src="assets/img/rooms/mission_belvedere.png" alt="Room">
                     </div>
                 </div>
                 <div class="room">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                     <div class="img-gradient">
-                        <img src="assets/img/rooms/school_of_magic.jpg" alt="Room">
+                        <img src="assets/img/rooms/school_of_magic.png" alt="Room">
                     </div>
                 </div>
                 <div class="room">
@@ -102,7 +102,7 @@
                         <p class="room__description">Horror with live actor <span class="icon_mask"><img src="assets/img/icons/Mask.png" alt="Icon Mask"></span></p>
                     </div>
                     <div class="img-gradient">
-                        <img src="assets/img/rooms/the_unknown.jpg" alt="Room">
+                        <img src="assets/img/rooms/the_unknown.png" alt="Room">
                     </div>
                 </div>
                 <div class="room">
@@ -111,7 +111,7 @@
                         <p class="room__description">Horror with live actor <span class="icon_mask"><img src="assets/img/icons/Mask.png" alt="Icon Mask"></span></p>
                     </div>
                     <div class="img-gradient">
-                        <img src="assets/img/rooms/the_Nun.jpg" alt="Room">
+                        <img src="assets/img/rooms/the_Nun.png" alt="Room">
                     </div>
                 </div>
             </section>
